# ioBroker.roborock

./: .ai-agent-rules.md  .commitmessage  .create-adapter.json  .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.json  CHANGELOG_OLD.md  DEPENDENCY_OVERRIDES.md  LICENSE  README.md  RULES.md  TSCONFIG_README.md  dev-server.js  eslint.config.mjs  extracted_errors.json  fetchAndProcessRobrockPackage.js  genDirs.txt  io-package.json  jsdoc.json  languages.txt  main.js  mitmproxy_release.txt  package-lock.json  package.json  prettier.config.mjs  test.rrmap  test_header.js  translate_js_files.js  tsconfig.build.json  tsconfig.build.web.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  tsconfig.web.json  typedoc.json  verify_b01_crypto.ts  vitest.config.ts
.github/: FUNDING.yml  auto-merge.yml  dependabot.yml
.husky/: pre-commit  pre-push
admin/: jsonConfig.json  words.js
docs/: APK_APPPLUGIN_EXECUTION_MODEL.md  APPPLUGIN_ACTOR_SCALING_POC.md  APPPLUGIN_DESKTOP_POC.md  APPPLUGIN_EVIDENCE_LEVELS.md  APPPLUGIN_FIRST_ARCHITECTURE.md  APPPLUGIN_LIVE_READ_PROOF.md  APPPLUGIN_LOCALE_POC.md  APPPLUGIN_MAP_BEHAVIOR_GATES.md  APPPLUGIN_MAP_COMPATIBILITY.md  APPPLUGIN_MAP_LAB_POC.md  APPPLUGIN_Q10_MAP_EVENT_POC.md  APPPLUGIN_REWORK_PHASES.md  APPPLUGIN_RUNTIME_OPERATING_POLICY.md  APPPLUGIN_RUNTIME_POC.md  APPPLUGIN_THEME_POC.md  APPPLUGIN_UI_CONTRACT_POC.md  CloudAPI.md  Commands.md  DependencyOverrides.md  Encryption.md  appplugin-rework-tracker.json  base.js.html  global.html  index.html  jsdoc.json  module-gen1.html  modules.html
lib/: RRMapParser.js  basic_robot.js  basic_vacuum.js  basic_washer.js  deviceFeatures.js  device_features.js  http_api.js  index.js  localConnector.js  local_api.js  mapCreator.js  message.js  messageQueueHandler.js  message_parser.js  mqtt_api.js  requests_handler.js  roborock.vacuum.a08.js  roborock.vacuum.a10.js  roborock.vacuum.a15.js  roborock.vacuum.a27.js  roborock.vacuum.a38.js  roborock.vacuum.a62.js  roborock.vacuum.a72.js  roborock.vacuum.s4.js  roborock.vacuum.s5.js  roborock.vacuum.s5e.js  roborock.vacuum.s6.js  roborockApi.js  roborockPackageHelper.js  roborock_mqtt_connector.js  roborock_package_helper.js  roborock_s7.js  roborock_vacuum_a08.js  roborock_vacuum_a10.js  roborock_vacuum_a15.js  roborock_vacuum_a19.js  roborock_vacuum_a27.js  roborock_vacuum_a38.js  roborock_vacuum_a40.js  roborock_vacuum_a51.js  (+14 more)
scripts/: ai-review-diff.js  ai-review-instructions.md  appplugin_hermes_runtime_probe.ts  appplugin_map_matrix.js  appplugin_phase0.js  appplugin_rework_tracker.js  appplugin_runtime_poc.js  appplugin_ui_probe.js  appplugins.js  audit_appplugin_runtime_contracts.ts  benchmark_appplugin_resources.ts  build_appplugin_desktop.js  build_hermes_appplugin_host.js  capture_q7_appplugin_locale_goldens.ts  capture_q7_appplugin_theme_goldens.ts  check-eslint-peer-deps.js  check-lockfile.js  check-mergeability.js  expert-review.js  extract_appplugin_error_codes.js  extract_protocols.js  (+41 more)
tools/hermes-appplugin-host/: CMakeLists.txt  README.md  bridge_bootstrap.js  smoke_bundle.js
tools/hermes-appplugin-host/src/: llvh_mingw_compat.cpp  main.cpp
(+8561 files in other folders)
